  * fixed remove indices by error state
  * fixed move storages to new location with PostgreSQL:
    avoid concurrent/long running database operations
  * fixed crash in slave mode (#issue 3, thanks to ChrisTG742)
  * fixed WebDAV login: support port number, fixed passed path
  * added option --webdav-port
  * fixed WebDAV chunked download
  * fixed WebDAVS
  * BARControl: added option --info
  * BARControl: fixed list directory entries on insufficient
    permission
  * BARControl: fixed option --index-database-add: match
    pattern
  * BARControl: fixed sort file tree items by type/size/
    date+time
  * BARControl: fixed display of included/execluded entries
    via pattern
  * BARControl: fixed error handling when slave is in
    disconnected state
  * BARControl: added tooltip for total entries

2023-04-16 0.22g
  * fixed lost resource in debug version
  * BARControl: fixed update job sate in dry-mode (issue #2,
    thanks to ChrisTG742)
  * fixed error handling WebDAV access
  * fixed test run on Jenkins
  * BARControl: fixed sort file tree items by type/size/
    date+time

2023-02-15 0.22f
  * fixed error message: no space left on device
  * improved find storage files: skip unreadable directories
  * bar-index: fixed remove duplicate storages
  * bar-index: fixed MariaDB functions
  * bar-index: fixed option --tmp-directory
  * bar-index: improved tests
  * BARControl: fixed edit serve maintenance time (locale)
  * BARControl: fixed update file lists
  * BARControl: fixed update restore dialog

2023-01-15 0.22e
  * fixed PostgreSQL memory consumption: use single
    row mode
  * fixed memory leak

2022-12-25 0.22d
  * fixed memory leak in PostgreSQL API call
  * add missing lock slave list
  * fixed valgrind warning
  * fixed format error messages with arguments
  * fixed format some log lines
  * fixed full-text-search matching for SQLite
  * fixed SQLite database locking when new storage
    is inserted
  * fixed configuration issue handling: report as